--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,7 +6,12 @@
 @import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+
+// Bulma
+@import '~bulma/bulma';
+
+
 
 .navbar-laravel {
   background-color: #fff;
